// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductList/> should be list product should have the same ui structure with five product 1`] = `
<div
  className="card-deck mb-3 text-center"
>
  <div
    className="ard mb-4 shadow-sm"
    key="1"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h1
        className="card-title pricing-card-title"
      >
        $
        $10
      </h1>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage"
      />
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm"
    key="2"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h1
        className="card-title pricing-card-title"
      >
        $
        $10
      </h1>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage1"
      />
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm"
    key="3"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h1
        className="card-title pricing-card-title"
      >
        $
        $10
      </h1>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage2"
      />
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm"
    key="4"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h1
        className="card-title pricing-card-title"
      >
        $
        $10
      </h1>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage3"
      />
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm"
    key="5"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h1
        className="card-title pricing-card-title"
      >
        $
        $10
      </h1>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage4"
      />
    </div>
  </div>
</div>
`;

exports[`<ProductList/> should be list product should have the same ui structure with one product 1`] = `
<div
  className="card-deck mb-3 text-center"
>
  <div
    className="ard mb-4 shadow-sm"
    key="1"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h1
        className="card-title pricing-card-title"
      >
        $
        $10
      </h1>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage"
      />
    </div>
  </div>
</div>
`;
